--- a/docker/helm/Chart.yaml
+++ b/docker/helm/Chart.yaml
@@ -16,7 +16,7 @@
 #
 
 apiVersion: v2
-name: remote-shuffle-service
+name: celeborn
 description: >
   Celeborn is dedicated to improving the efficiency and elasticity of different map-reduce engines.
   Celeborn provides an elastic and high efficient management service for shuffle data.
