--- a/docker/helm/templates/master-service.yaml
+++ b/docker/helm/templates/master-service.yaml
@@ -18,18 +18,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rss-master-svc
+  name: celeborn-master-svc
   labels:
-    {{- include "remote-shuffle-service.labels" . | nindent 4 }}
+    {{- include "celeborn.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
       protocol: TCP
-      name: rss-master
+      name: celeborn-master
   clusterIP: None
   selector:
-    {{- include "remote-shuffle-service.selectorLabels" . | nindent 4 }}
-    app.kubernetes.io/name: shuffleservicemaster
+    {{- include "celeborn.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/name: celeborn-master
     app.kubernetes.io/role: master
