--- a/conf/celeborn-defaults.conf.template
+++ b/conf/celeborn-defaults.conf.template
@@ -31,13 +31,12 @@ rss.worker.prometheus.metric.port                9096
 rss.master.prometheus.metric.port                9098
 rss.worker.base.dirs                             /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4,/mnt/disk5,/mnt/disk6,/mnt/disk7,/mnt/disk8,/mnt/disk9,/mnt/disk10
 
-rss.master.port                                  9097
-rss.ha.enabled                                    true
-rss.ha.master.hosts                              localhost
-rss.ha.service.id                             rss
-rss.ha.nodes.rss                              node1
-rss.ha.address.rss.node1                      localhost
-rss.ha.port                                   9872
+celeborn.master.endpoints                        celeborn-master1:9097,celeborn-master2:9097,celeborn-master3:9097
+celeborn.ha.enabled                              true
+rss.ha.port                                      9872
+rss.ha.service.id                                rss
+rss.ha.nodes.rss                                 node1
+rss.ha.address.rss.node1                         localhost
 rss.ha.storage.dir                               /mnt/disk1/rss_ratis/
-rss.ha.ratis.snapshot.auto.trigger.enabled            true
-rss.ha.ratis.snapshot.auto.trigger.threshold        200000
+rss.ha.ratis.snapshot.auto.trigger.enabled       true
+rss.ha.ratis.snapshot.auto.trigger.threshold     200000
