--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -48,4 +48,4 @@ jobs:
           java-version: 8
           cache: 'maven'
           check-latest: false
-      - run: build/mvn spotless:check -Pspark-${{ matrix.spark }}
+      - run: build/mvn spotless:check -Pgoogle-mirror,spark-${{ matrix.spark }}
