--- a/master/pom.xml
+++ b/master/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.celeborn</groupId>
     <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>${project.version}</version>
   </parent>
 
   <artifactId>celeborn-master_${scala.binary.version}</artifactId>
