--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
   <groupId>org.apache.celeborn</groupId>
   <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>${project.version}</version>
   <packaging>pom</packaging>
 
   <name>Celeborn Project Parent POM</name>
@@ -53,6 +53,7 @@
   </distributionManagement>
 
   <properties>
+    <project.version>0.2.0-SNAPSHOT</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
