--- a/docker/helm/values.yaml
+++ b/docker/helm/values.yaml
@@ -38,26 +38,25 @@ celebornVersion: 0.1.1
 
 # celeborn configurations
 celeborn:
-  # please update rss.worker.base.dirs to disk mount path on k8s node
-  rss.worker.base.dirs: /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4
-  rss.push.data.replicate: true
-  rss.master.prometheus.metric.port: 9098
-  rss.device.monitor.enabled: false
+  # please update celeborn.worker.storage.dirs to disk mount path on k8s node
+  celeborn.worker.storage.dirs: /mnt/disk1,/mnt/disk2,/mnt/disk3,/mnt/disk4
+  celeborn.push.replicate.enabled: true
+  celeborn.master.metrics.prometheus.port: 9098
+  celeborn.worker.deviceMonitor.enabled: false
   rss.rpc.io.serverThreads: 64
-  rss.worker.flush.queue.capacity: 1024
   rss.worker.fetch.chunk.size: 8m
   rss.rpc.io.numConnectionsPerPeer: 8
-  rss.worker.flush.buffer.size: 256K
-  rss.metrics.system.enable: true
+  celeborn.worker.flush.buffer.size: 256K
+  celeborn.metrics.enabled: true
   rss.push.io.threads: 32
   rss.fetch.io.threads: 32
   rss.stage.end.timeout: 120s
-  rss.worker.prometheus.metric.port: 9096
+  celeborn.worker.metrics.prometheus.port: 9096
   rss.rpc.io.clientThreads: 64
   rss.application.timeout: 120s
   rss.rpc.dispatcher.numThreads: 4
   rss.worker.timeout: 120s
-  rss.ha.storage.dir: /mnt/rss_ratis/
+  celeborn.ha.master.ratis.raft.server.storage.dir: /mnt/rss_ratis/
 
 environments:
   CELEBORN_MASTER_MEMORY: 2g
