--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Markdown==3.3.7
 MarkupSafe==2.1.1
 mergedeep==1.3.4
 mkdocs==1.3.1
+mkdocs-include-markdown-plugin==3.8.1
 mkdocs-macros-plugin==0.7.0
 mkdocs-material==8.3.9
 mkdocs-material-extensions==1.0.3
