--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
     <maven.plugin.dependency.version>3.1.1</maven.plugin.dependency.version>
     <maven.plugin.flatten.version>1.3.0</maven.plugin.flatten.version>
     <maven.plugin.jar.version>3.0.2</maven.plugin.jar.version>
-    <maven.plugin.os.version>1.5.0.Final</maven.plugin.os.version>
+    <maven.plugin.os.version>1.7.0</maven.plugin.os.version>
     <maven.plugin.protobuf.version>0.5.1</maven.plugin.protobuf.version>
     <maven.plugin.rat.version>0.13</maven.plugin.rat.version>
     <maven.plugin.scala.version>4.7.2</maven.plugin.scala.version>
