--- a/pom.xml
+++ b/pom.xml
@@ -574,6 +574,7 @@
             <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
             <failIfNoTests>false</failIfNoTests>
+            <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
           </configuration>
           <executions>
             <execution>
