--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -18,12 +18,8 @@
 name: Celeborn Benchmark
 
 on:
-  workflow_dispatch:
-    inputs:
-      benchmark:
-        description: 'benchmark'
-        required: true
-        default: 'default-benchmark'
+  repository_dispatch:
+    types: [ benchmark ]
 
 jobs:
   regression:
@@ -31,6 +27,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.client_payload.pull_request.head.ref }}
+          path: ${{ github.event.repository.name }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
       - name: Build
         run: ./dev/make-distribution.sh -Pspark-3.2 && rm -rf /home/hadoop/celeborn-toolkit/dist/* && mv celeborn-*.tgz /home/hadoop/celeborn-toolkit/dist/
