--- a/.github/workflows/benchmark_manual.yml
+++ b/.github/workflows/benchmark_manual.yml
@@ -15,11 +15,15 @@
 # limitations under the License.
 #
 
-name: Celeborn Regression
+name: Celeborn User Triggered Benchmark
 
 on:
-  repository_dispatch:
-    types: [ regression ]
+  workflow_dispatch:
+    inputs:
+      benchmark:
+        description: 'benchmark'
+        required: true
+        default: 'default-benchmark'
 
 jobs:
   regression:
@@ -27,19 +31,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          repository: ${{ github.event.client_payload.pull_request.head.repo.full_name }}
-          ref: ${{ github.event.client_payload.pull_request.head.ref }}
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
       - name: Build
         run: ./dev/make-distribution.sh -Pspark-3.2 && rm -rf /home/hadoop/celeborn-toolkit/dist/* && mv celeborn-*.tgz /home/hadoop/celeborn-toolkit/dist/
 
-      - name: Regression
-        run: /home/hadoop/celeborn-toolkit/reg.sh regression
+      - name: Benchmark
+        run: /home/hadoop/celeborn-toolkit/reg.sh benchmark
 
       - name: Upload Result
         uses: actions/upload-artifact@v3
         with:
-          name: regression result
+          name: benchmark result
           path: /home/hadoop/celeborn-toolkit/result/
