--- a/.github/workflows/check_stale_prs.yml
+++ b/.github/workflows/check_stale_prs.yml
@@ -23,7 +23,7 @@ jobs:
         days-before-pr-stale: 20
         days-before-pr-close: 10
         stale-pr-message: 'This PR is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
-        close-pr-message: 'This issue was closed because it has been stalled for 10 days with no activity.'
+        close-pr-message: 'This issue was closed because it has been staled for 10 days with no activity.'
 
 
         
