1.update version to 0.1.4 2.optimize rpc memory usage 3.keep one copy of roaring bitmap 4.shade commands-lang3 to avoid dependency conflicts 5.update RSS dashboard

--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,13 @@
 
   <groupId>com.aliyun.emr</groupId>
   <artifactId>remote-shuffle-service</artifactId>
-  <version>0.1.3</version>
+  <version>${project.version}</version>
   <packaging>pom</packaging>
 
   <name>Aliyun E-MapReduce Shuffle Service Project Parent POM</name>
 
   <properties>
+    <project.version>0.1.4</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
