--- a/server-master/pom.xml
+++ b/server-master/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>remote-shuffle-service</artifactId>
         <groupId>com.aliyun.emr</groupId>
-        <version>0.1.3</version>
+        <version>${project.version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
