--- a/common/pom.xml
+++ b/common/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.aliyun.emr</groupId>
     <artifactId>remote-shuffle-service</artifactId>
-    <version>0.1.3</version>
+    <version>${project.version}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
