--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,16 @@
         <type>test-jar</type>
       </dependency>
       <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.databind.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>${guava.version}</version>
@@ -656,7 +666,7 @@
               <phase>package</phase>
               <configuration>
                 <minimizeJar>false</minimizeJar>
-                <shadedArtifactAttached>true</shadedArtifactAttached>
+                <shadedArtifactAttached>false</shadedArtifactAttached>
               </configuration>
             </execution>
           </executions>
@@ -834,6 +844,7 @@
       <modules>
         <module>client-spark/common</module>
         <module>client-spark/spark-2</module>
+        <module>client-spark/spark-2-shaded</module>
       </modules>
       <properties>
         <jackson.version>2.6.7</jackson.version>
@@ -863,6 +874,7 @@
       <modules>
         <module>client-spark/common</module>
         <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-shaded</module>
       </modules>
       <properties>
         <jackson.version>2.10.0</jackson.version>
@@ -873,18 +885,6 @@
         <spark.version>3.0.3</spark.version>
         <zstd-jni.version>1.4.4-3</zstd-jni.version>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>${jackson.databind.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
 
     <profile>
@@ -892,6 +892,7 @@
       <modules>
         <module>client-spark/common</module>
         <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-shaded</module>
       </modules>
       <properties>
         <jackson.version>2.10.0</jackson.version>
@@ -901,20 +902,7 @@
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.1.3</spark.version>
         <zstd-jni.version>1.4.8-1</zstd-jni.version>
-        <celeborn.shuffle.manager>shuffle-manager-3</celeborn.shuffle.manager>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>${jackson.databind.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
 
     <profile>
@@ -922,6 +910,7 @@
       <modules>
         <module>client-spark/common</module>
         <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-shaded</module>
       </modules>
       <properties>
         <jackson.version>2.12.3</jackson.version>
@@ -932,18 +921,6 @@
         <spark.version>3.2.2</spark.version>
         <zstd-jni.version>1.5.0-4</zstd-jni.version>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>${jackson.databind.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
 
     <profile>
@@ -951,6 +928,7 @@
       <modules>
         <module>client-spark/common</module>
         <module>client-spark/spark-3</module>
+        <module>client-spark/spark-3-shaded</module>
       </modules>
       <properties>
         <jackson.version>2.13.3</jackson.version>
@@ -961,18 +939,6 @@
         <spark.version>3.3.0</spark.version>
         <zstd-jni.version>1.5.2-1</zstd-jni.version>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-annotations</artifactId>
-          <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-databind</artifactId>
-          <version>${jackson.databind.version}</version>
-        </dependency>
-      </dependencies>
     </profile>
 
     <profile>
