--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,14 +18,22 @@
 ARG java_image_tag=8-jdk-focal
 FROM eclipse-temurin:${java_image_tag}
 
-USER root
+ARG celeborn_uid=10006
+ARG celeborn_gid=10006
+
+ENV CELEBORN_HOME=/opt/celeborn
+ENV PATH=/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/busybox:${CELEBORN_HOME}/sbin:${CELEBORN_HOME}/bin
 
 RUN set -ex && \
     apt-get update && \
     apt-get install -y bash tini busybox bind9-utils telnet net-tools procps krb5-user dnsutils && \
     ln -snf /bin/bash /bin/sh && \
     rm -rf /var/cache/apt/* && \
-    mkdir -p /opt/celeborn
+    mkdir /opt/busybox && \
+    busybox --install /opt/busybox && \
+    groupadd --gid=${celeborn_gid} celeborn && \
+    useradd  --uid=${celeborn_uid} --gid=${celeborn_gid} celeborn -d /home/celeborn -m && \
+    mkdir -p ${CELEBORN_HOME}
 
 COPY bin /opt/celeborn/bin
 COPY sbin /opt/celeborn/sbin
@@ -34,3 +42,12 @@ COPY jars /opt/celeborn/jars
 COPY master-jars /opt/celeborn/master-jars
 COPY worker-jars /opt/celeborn/worker-jars
 COPY RELEASE /opt/celeborn/RELEASE
+
+RUN chown -R celeborn:0 ${CELEBORN_HOME} && \
+    chmod -R ug+rw ${CELEBORN_HOME} && \
+    chmod a+x ${CELEBORN_HOME}/bin/* && \
+    chmod a+x ${CELEBORN_HOME}/sbin/*
+
+USER celeborn
+
+ENTRYPOINT ["/usr/bin/tini", "--"]
