--- a/docker/helm/values.yaml
+++ b/docker/helm/values.yaml
@@ -49,7 +49,7 @@ celeborn:
   celeborn.worker.flush.buffer.size: 256K
   celeborn.metrics.enabled: true
   rss.push.io.threads: 32
-  rss.fetch.io.threads: 32
+  celeborn.worker.fetch.io.threads: 32
   celeborn.push.stageEnd.timeout: 120s
   celeborn.worker.metrics.prometheus.port: 9096
   rss.rpc.io.clientThreads: 64
