--- a/.asf.yaml
+++ b/.asf.yaml
@@ -36,5 +36,5 @@ github:
     projects: false
 notifications:
   commits: commits@celeborn.apache.org
-  issues: notifications@celeborn.apache.org
-  pullrequests: notifications@celeborn.apache.org
+  issues: issues@celeborn.apache.org
+  pullrequests: issues@celeborn.apache.org
