[CELEBORN-106] flink-plugin supports shufflewrite:OutputGate

--- a/pom.xml
+++ b/pom.xml
@@ -977,6 +977,7 @@
       <id>flink-1.14</id>
       <modules>
         <module>client-flink/flink-1.14</module>
+        <module>client-flink/flink-common</module>
         <module>client-flink/flink-shaded</module>
       </modules>
       <properties>
